<resources>
    <string name="app_name">AgriExpense</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_cycle">New Cycle</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="title_activity_purchase">Purchase</string>
    <string name="title_activity_view_cycles">View Cycles</string>
    <string name="title_activity_cycle_useage">Cycle Usage</string>
    <string name="title_activity_use_resource">Use Resource</string>
    <string name="title_activity_choose_purchase">Choose Purchase</string>
    <string name="title_activity_use_purchase_frag">Use Purchase</string>
    <string name="title_activity_new_cycle_redesigned">Creating crop cycle</string>
    <string name="title_activity_new_purchase_redesign">Purchasing new materials</string>
    <string name="title_activity_manage_resources">Manage Resources</string>
    <string name="title_activity_cycle_useage_redesign">Cycle Usage</string>
    <string name="title_activity_hire_labour">Hiring labour</string>
    <string name="title_activity_delete_resoure">Delete Resoure</string>
    <string name="title_activity_delete_data">Delete Data</string>
    <string name="title_activity_edit_cycle">Edit Cycle</string>
    <string name="title_activity_edit_purchase">Edit Purchase</string>
    <string name="title_activity_edit_data">Edit Data</string>
    <string name="title_activity_manage_data">Manage Data</string>
    <string name="title_activity_edit_choose_lists">Edit Choose Lists</string>
    <string name="title_activity_add_data">Add Data</string>
    <string name="title_activity_view_cycle_usege">View Cycle Usage</string>
    <string name="title_activity_sales_cost">Calculating Sales</string>
    <string name="title_activity_harvest_details">Harvest Details</string>
    <string name="title_activity_select_location">Select Location</string>
    <string name="title_activity_about">About</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_action_edit_res">Edit Resource</string>
    <string name="menu_action_delete_res">Delete Resource</string>
    <string name="menu_action_view_res">View Resource</string>
    <string name="menu_action_edit_crop">Edit Crop Cycle</string>
    <string name="menu_action_delete_crop">Delete Crop Cycle</string>
    <string name="menu_action_close_crop">Close Crop Cycle</string>
    <string name="menu_action_view_crop">View Crop Cycle</string>
    <string name="menu_action_edit_pur">Edit Purchase</string>
    <string name="menu_action_delete_pur">Delete Purchase</string>
    <string name="menu_action_view_pur">View Purchase</string>
    <string name="btn_new_purchase">New Purchase</string>
    <string name="btn_new_cycle">New Cycle</string>
    <string name="btn_new_labour">Hire Labour</string>
    <string name="btn_man_resource">Resources</string>
    <string name="btn_man_data">Manage Data</string>
    <string name="btn_gen_report">Reports</string>
    <string name="btn_man_signin">Sign In</string>
    <string name="btn_man_about">About</string>
    <string name="btn_man_backup">Backup Data</string>
    <string name="txt_new_purchase_quantity">Quantity</string>
    <string name="txt_new_purchase_cost">Cost</string>
    <string name="hint_new_purchase_quantity">Enter Quantity of Resource that was purchased</string>
    <string name="hint_new_purchase_cost">Enter the total Cost for the Resources purchased</string>
    <string name="btn_new_purchase_save">Done</string>
    <string name="txt_new_cycle_placeholder">Crop Cycle</string>
    <string name="txt_new_cycle_new">Creating new crop cycle</string>
    <string name="txt_new_cycle_land_quantity">Land Quantity</string>
    <string name="hint_new_cycle_land_quantity">Enter Land Quantity Used for this Cycle</string>
    <string name="txt_new_cycle_date">Select Date</string>
    <string name="txt_new_cycle_default_date">--no date--</string>
    <string name="btn_new_cycle_date">Start Date</string>
    <string name="btn_new_cycle_save">Done</string>
    <string name="txt_reports_title">Reports</string>
    <string name="txt_reports_subtitle">Listing of all the reports created by the system</string>
    <string name="btn_reports_new">New Report</string>
    <string name="txt_general_details">Details:</string>
    <string name="txt_location_country_main">Select Country</string>
    <string name="txt_location_country_sub">Select Subdivision</string>
    <string name="txt_location_county_main">Select County</string>
    <string name="txt_location_county_sub">This is where most/all of your crops are currently located Basically where is your farm closest to</string>
    <string name="about_image_description_uwi">University of the West Indies Logo</string>
    <string name="about_image_description_namdevco">NAMDEVCO Logo</string>
    <string name="about_image_description_agrinett_logo">AgrineTT Logo</string>
    <string name="about_description_uwi">AgriNeTT focuses on integrating ICT to improve the operations within the Agricultural sector of Trinidad and Tobago. The project is a collaborative effort of the Department of Computing and Information Technology at The University of the West Indies, The Faculty of Food and Agriculture at UWI, and various farmers’ representative organizations.</string>
    <string name="about_description_namdevco">The National Agricultural Marketing and Development Corporation (NAMDEVCO) of Trinidad and Tobago is a major partner in the development and execution of the AgriNeTT project and has continued to provide tremendous support for the development of the AgriExprenseTT mobile application.</string>
    <string name="general_image_placeholder_text">Image</string>
    <string name="title_activity_help_screen">Help</string>
    <string name="help_main_screen">Select Help Topic</string>
    <string name="help_image_placeholder_text">Article Image</string>
    <string name="help_intro">At the beginning of the application the user is presented a menu of options. A common starting point is to purchase items as we must first buy the resources needed to begin planting our crops. Each time a purchase is made, the user enters the information by selecting “Purchase”. </string>
    <string name="help_intro_2">Crops are managed in cycles. A cycle is a single planting of crop in a given time. Therefore if the same crop is planted on two different days and on different portions of land it should be treated as separate cycles.</string>
    <string name="help_purchase_new_resource_1">When purchasing a new item, you must select a category, a resource, (the item you are purchasing)  how you are buying that resource, the quantity and cost. First begin by selecting the resource desired. The list of resources within the system is specified in the image above.</string>
    <string name="help_purchase_new_resource_2">Within this example we select the Fertilizer resource. (As shown in the image above) After selecting the Fertilizer category, the system displays a list of all possible choices of fertilizers applicable within Trinidad and Tobago. If an option is missing, users can add new fertilizers through the "Manage Data" section of the application. </string>
    <string name="help_purchase_new_resource_3">After choosing the specific fertilizer, the amount (number) of Fertilizer (resource) and its respective cost must be specified. When completed the system will show the available resource that a farmer will have based on their records.</string>
    <string name="help_purchase_new_resource_4">Though we looked at Fertilizers within this example, there are different type of resources (therefore expenses) within the system. The diagram (image above) offers an explanation of the various expenses within the application.</string>
    <string name="help_cropcycle_new_1">The purchases made earlier now have to be allocated to the crops that you are planting. The entire purchase or a part of the purchase can be allocated to a crop cycle. Our next step is to create the crop cycle. When ‘create new cycle’ is selected we are presented with the list of crops (image above).</string>
    <string name="help_cropcycle_new_2">After selecting the crop to be planted in this cycle, we must specify the general size of land that the commodity will be planted on.</string>
    <string name="help_cropcycle_new_3">After selecting the type of land, we specify the total land and the date when the planting will begin.</string>
    <string name="help_cropcycle_new_4">After completing the creation of the cycle, the overview screen of the crop cycle is presented.</string>
    <string name="help_manage_resources">Each time something that was purchased is used in a crop cycle, that expense (or part of it) must be allocated to the crop cycle. This is done through the ‘manage resources’ menu item. Upon selection you are presented with a list of crop cycles. These crop cycles are displayed in order of time planted. Therefore the most recent crop cycle will appear first.</string>
    <string name="help_manage_resources_2">This application is designed to track the expenses of the crop cycle and not everything that you buy; as such the application calculates and adds cost on what you use in a crop cycle.Therefore you must  use from what you\'ve purchased</string>
    <string name="help_manage_resources_3">As seen in fig 1.8 you are given the option to \'use more\' of something in your crop cycle, upon selection, you are presented with fig 1.9 where you select which of the items you have purchased you are going to use from. Note that the colours correspond to a category (In fig 1.9, green is  Planting material and blue is fertilizers, while purple in fig 2.0 is chemical where you actually specify the usage. </string>
    <string name="help_manage_resources_4">You can change the unit of measurement you are using underneath \'Type of use\' e.g. you can buy in litres (Lt) and use milliliters (ml).You must then enter the amount you are using, in fig 2.0 the person is using 400 ml. Underneath the label \'Use\' there is some text that shows the details of what you are going to use, every time you hit the button \'calculate\', the app will calculate how much money will using the amount cost. If you select \'Use it!\' you are brought back to fig1.8 but the information would be updated to reflect the use of your purchase.</string>
    <string name="help_hiring_labour_1">Hiring labour is very similar to purchasing a new material as you have to select who you\'re hiring (similar what you\'re actually purchasing), how are you paying them e.g. hourly (similar to the quantifier) and finally how much they work for and the total cost. </string>
    <string name="help_hiring_labour_2">The difference is in the option to select if the labour is used for one cycle or many cycles, this means is the person you hire going to work for one or many different cycles.</string>
    <string name="help_hiring_labour_3">When you select \‘hire labour\’ you are presented with the view in fig 2.1. After you select who you\'re hiring you are presented with fig 2.2 where you must select if the individual is working for one cycle or many cycle. If you select one cycle you are presented with fig 2.3</string>
    <string name="help_hiring_labour_4">After if you select many cycles or when you select which cycle the individual is working for, you are presented with fig 2.4 and then 2.5 to confirm hiring.</string>
    <string name="help_hiring_labour_5">The user is then presented with the overview of the current cycle details.</string>
</resources>